<resources>
    <string name="app_name">IAI Promo</string>
    <string name="welcome_words">Bienvenue dans Notre Communauté</string>
    <string name="accueil_words">"Créée en 1971, notre communauté continue de s'étendre, unie par des valeurs et des objectifs communs. Entre les niveaux SOMMET et BLEU, la hiérarchie reste toujours visible et bien définie.\nEnsemble, nous construisons un avenir meilleur, et c'est avec fierté que nous donnons à nos jeunes frères et sœurs la possibilité de savoir vers qui se tourner en cas de besoin."</string>
    <string name="accueil_btn_words">Continuer ...</string>
    <string name="title_activity_connect">connectActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">IAI Promo</string>
    <string name="nav_header_subtitle">Communauté des étudiants</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Paramètre</string>
    <string name="action_help">Aide</string>
    <string name="action_about">A propos</string>

    <string name="menu_promotion">Promotion</string>
    <string name="menu_favoris">Favoris</string>
    <string name="menu_compte">Compte</string>

    <!-- Page de connexion -->
    <string name="activity_name">Connexion</string>
    <string name="identifiant">Email ou numéro</string>
    <string name="password">Password</string>
    <string name="connect_btn">Se connecter</string>
    <string name="creer_compte_btn">Créer un compte</string>
    <string name="voir_password">Aperçu du mot de passe</string>
    <string name="password_oublie">Mot de passe oublié!</string>
</resources>