<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:icon="@drawable/settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        android:title="@string/action_help"
        android:icon="@drawable/help"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        android:icon="@drawable/developers"
        app:showAsAction="never" />
</menu>