<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_promotion">

    <fragment
        android:id="@+id/nav_promotion"
        android:name="com.zopipo.iaipromo.activities.ui.Promotion.PromotionFragment"
        android:label="@string/menu_promotion"
        tools:layout="@layout/fragment_promotion" />

    <fragment
        android:id="@+id/nav_favoris"
        android:name="com.zopipo.iaipromo.activities.ui.Favoris.FavorisFragment"
        android:label="@string/menu_favoris"
        tools:layout="@layout/fragment_favoris" />

    <fragment
        android:id="@+id/nav_compte"
        android:name="com.zopipo.iaipromo.activities.ui.compte.CompteFragment"
        android:label="@string/menu_compte"
        tools:layout="@layout/fragment_compte" />
</navigation>